<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btn_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#30A3F6"
            android:text="@string/btn_vertical"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#30A3F6"
            android:text="@string/btn_horizontal"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#30A3F6"
            android:text="@string/viewpager2_tab_layout"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#30A3F6"
            android:text="@string/viewpager2_radiobutton"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />
    </LinearLayout>

</FrameLayout>